# carbonchain

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  PR_CHECKLIST.md  README.md  TODO.md  docker-compose.yml
.github/workflows/: ci.yml
api/: .env.example  nest-cli.json  package-lock.json  package.json
api/src/: app.module.ts  env-validation.spec.ts  env-validation.ts  main.ts  shared.ts
api/src/auth/: auth.controller.ts  auth.service.ts
api/src/common/: logger.ts  pino-nest-logger.service.spec.ts  pino-nest-logger.service.ts  request-context.ts  request-id.middleware.spec.ts  request-id.middleware.ts  request-logging.middleware.spec.ts  (+1 more)
api/test/: app.e2e-spec.ts  health.e2e-spec.ts  jwt-auth.e2e-spec.ts  request-id.e2e-spec.ts  security.e2e-spec.ts  setup.ts
contracts/: Cargo.toml
contracts/credit_registry/src/: errors.rs  events.rs  lib.rs  types.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs
contracts/mrv_oracle/: Cargo.toml
contracts/mrv_oracle/src/: lib.rs
contracts/retirement/: Cargo.toml
contracts/retirement/src/: lib.rs  types.rs
docs/features/: ANCHOR_INFO_DISCOVERY.md  DOMAIN_VALIDATION.md  ERROR_CODES_REFERENCE.md  LOGGING.md  METADATA_CACHE.md  REQUEST_ID_PROPAGATION.md  RETRY_BACKOFF.md  ROUTING_STRATEGY.md  SEP10_AUTH.md  STATUS_MONITOR.md  TRANSACTION_STATE_TRACKER.md  WEBHOOK_MONITOR.md
frontend/: .gitignore  angular.json  ngsw-config.json  package-lock.json  package.json  proxy.conf.json
frontend/public/: manifest.webmanifest
frontend/src/: index.html
scripts/: deploy-testnet.sh
(+55 files in other folders)
